--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/hugo-natrium-theme"]
 	path = themes/hugo-natrium-theme
 	url = https://github.com/DrawFunction/hugo-natrium-theme.git
+[submodule "public"]
+	path = public
+	url = git@github.com:DrawFunction/drawfunction.net.git
+	branch = master
